--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.engtoolsdev.spotifystreamer"
+        applicationId "com.engtoolsdev.popmov"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -28,8 +28,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:palette-v7:22.2.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
+    compile 'com.jakewharton.timber:timber:3.1.0'
 }
