--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.jakewharton.timber:timber:3.1.0'
+    compile 'io.reactivex:rxandroid:0.24.0'
 }
